--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "irazasyed/larasupport": "*",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "opcodesio/log-viewer": "^3.21",
         "owen-it/laravel-auditing": "^14.0",
+        "rap2hpoutre/laravel-log-viewer": "^2.5",
         "yajra/laravel-datatables-oracle": "^12.6"
     },
     "require-dev": {
